--- a/force-app/main/default/classes/CP_SendEmailToResourceManager.cls
+++ b/force-app/main/default/classes/CP_SendEmailToResourceManager.cls
@@ -20,7 +20,7 @@ public class CP_SendEmailToResourceManager implements Database.Batchable<sObject
     
     public Database.QueryLocator start(Database.BatchableContext bc){
         return Database.getQueryLocator(
-        	'SELECT id,name, EMS_EM_JD__c, Resource_Manager__c, Resource_Manager__r.email, Resource_Manager__r.name, Designation__r.name FROM Contact WHERE EMS_EM_JD__c != NULL AND Resource_Manager__c != NULL AND RecordType.Name = \'Applicant\'' 
+        	'SELECT id,name, EMS_EM_JD__c, Resource_Manager__c, Resource_Manager__r.Personal_Email__c, Resource_Manager__r.name, Designation__r.name FROM Contact WHERE EMS_EM_JD__c != NULL AND Resource_Manager__c != NULL AND RecordType.Name = \'Applicant\'' 
         );
     }
     
@@ -59,7 +59,7 @@ public class CP_SendEmailToResourceManager implements Database.Batchable<sObject
         List<String> sendTo = new List<String>();
         for(Contact con : finalContactList){
             Messaging.SingleEmailMessage message = new Messaging.SingleEmailMessage();
-            sendTo.add(con.Resource_Manager__r.email);
+            sendTo.add(con.Resource_Manager__r.Personal_Email__c);
         	message.toAddresses = sendTo;
             message.setSubject('Cloud Peritus :  Upcoming Employee Onboarding');
             String body = 'Dear '+ con.Resource_Manager__r.name+', <br/><br/>';
