--- a/force-app/main/default/classes/LeaveRequestApproveHandler.cls
+++ b/force-app/main/default/classes/LeaveRequestApproveHandler.cls
@@ -15,7 +15,7 @@
 **/
 public without sharing class LeaveRequestApproveHandler {
             /**
-*   {Purpose} - Method used to update leave request status to Approced.
+*   {Purpose} - Method used to update leave request status to Approved, Approver 1 Pending, Approver 2 Pending.
 *
 *   CHANGE HISTORY
 *   ====================================================================================================
@@ -42,7 +42,8 @@ public without sharing class LeaveRequestApproveHandler {
                                                        		 EMS_LM_Current_Approver__c,
                                                              Approver_3__c,
                                                              Approver_3__r.LastName,
-                                                             Approver_3__r.FirstName
+                                                             Approver_3__r.FirstName,
+                                                       	     EMS_LM_Approved_On__c
                                                        FROM EMS_LM_Leave_History__c
                                                        WHERE Id =:leaveRequestId]) {
             //Approver 1
@@ -50,6 +51,9 @@ public without sharing class LeaveRequestApproveHandler {
             	leaveReqStatus.EMS_LM_Status__c = String.isNotBlank(leaveReqStatus.EMS_LM_2nd_Approver__c) ? LeaveRequestConstant.APPROVER_3_WAITING : LeaveRequestConstant.APPROVED;
             	leaveReqStatus.Approver_1_Approved_Comments__c = comments;
                 leaveReqStatus.EMS_LM_Current_Approver__c = String.isNotBlank(leaveReqStatus.EMS_LM_2nd_Approver__c) ? leaveReqStatus.EMS_LM_2nd_Approver__r.LastName + ' ' +  leaveReqStatus.EMS_LM_2nd_Approver__r.FirstName : leaveReqStatus.EMS_LM_Approver__r.LastName + ' ' + leaveReqStatus.EMS_LM_Approver__r.FirstName;
+                if(leaveReqStatus.EMS_LM_Status__c == LeaveRequestConstant.APPROVED ) {
+                   leaveReqStatus.EMS_LM_Approved_On__c	 = System.today();
+                }
             	updatedLeaveReqList.add(leaveReqStatus); 
             }
             //Approver 2
@@ -57,12 +61,16 @@ public without sharing class LeaveRequestApproveHandler {
                 leaveReqStatus.EMS_LM_Status__c = String.isNotBlank(leaveReqStatus.Approver_3__c) ? LeaveRequestConstant.APPROVER_4_WAITING: LeaveRequestConstant.APPROVED;
                 leaveReqStatus.Approver_2_Approved_Comments__c = comments;
                 leaveReqStatus.EMS_LM_Current_Approver__c = String.isNotBlank(leaveReqStatus.Approver_3__c) ? leaveReqStatus.Approver_3__r.LastName + leaveReqStatus.Approver_3__r.FirstName : leaveReqStatus.EMS_LM_2nd_Approver__r.LastName + ' ' +  leaveReqStatus.EMS_LM_2nd_Approver__r.FirstName ;
+                if(leaveReqStatus.EMS_LM_Status__c == LeaveRequestConstant.APPROVED ) {
+                   leaveReqStatus.EMS_LM_Approved_On__c	 = System.today();
+                }
                 updatedLeaveReqList.add(leaveReqStatus); 
             }
             //Approver 3
             else if (LeaveRequestConstant.LOGGEDIN_USERID == leaveReqStatus.Approver_3__c) {
                 leaveReqStatus.EMS_LM_Status__c = LeaveRequestConstant.APPROVED;
                 leaveReqStatus.Approver_3_Approved_Comments__c = comments;
+                leaveReqStatus.EMS_LM_Current_Approver__c = String.isNotBlank(leaveReqStatus.Approver_3__c) ? leaveReqStatus.Approver_3__r.LastName + leaveReqStatus.Approver_3__r.FirstName : NUll;
                 updatedLeaveReqList.add(leaveReqStatus); 
             }
         }
@@ -78,7 +86,7 @@ public without sharing class LeaveRequestApproveHandler {
     }
     
             /**
-*   {Purpose} - Method used for bulk updation of leave request status to Approced.
+*   {Purpose} - Method used for bulk updation of leave request status to Approved, Approver 1 Pending, Approver 2 Pending.
 *
 *   CHANGE HISTORY
 *   ====================================================================================================
@@ -87,37 +95,46 @@ public without sharing class LeaveRequestApproveHandler {
 *   ====================================================================================================
 **/
     @AuraEnabled
-    public static void bulkLeaveReqApproval(List<Id> bulkleaveReqId, String comments){
+    public static void bulkLeaveReqApproval(List<Id> bulkleaveReqId, String comments) {
         System.debug('### bulkleaveReqId ' + bulkleaveReqId);
         System.debug('### Comments ' + comments);
         List<EMS_LM_Leave_History__c> bulkupdatedLeaveReqList = new List<EMS_LM_Leave_History__c>();        
         for (EMS_LM_Leave_History__c bulkleaveReqApproval : [SELECT Id,
-                                                             EMS_LM_Status__c,
-                                                             Approver_1_Approved_Comments__c,
-                                                             Approver_2_Approved_Comments__c,
-                                                             Approver_3_Approved_Comments__c,
-                                                             EMS_LM_Approver__c,
-                                                             EMS_LM_2nd_Approver__c,
-                                                             Approver_3__c
-                                                       FROM EMS_LM_Leave_History__c
-                                                       WHERE Id =:bulkleaveReqId]){
+                                                                    EMS_LM_Status__c,
+                                                                    Approver_1_Approved_Comments__c,
+                                                                    Approver_2_Approved_Comments__c,
+                                                                    Approver_3_Approved_Comments__c,
+                                                                    EMS_LM_Approver__c,
+                                                                    EMS_LM_2nd_Approver__c,
+                                                                    Approver_3__c
+                                                             FROM EMS_LM_Leave_History__c
+                                                             WHERE Id =:bulkleaveReqId]) {
            System.debug('### bulkleaveReqApproval');
           //Approver 1
             if (LeaveRequestConstant.LOGGEDIN_USERID == bulkleaveReqApproval.EMS_LM_Approver__c) {
-            	bulkleaveReqApproval.EMS_LM_Status__c = String.isNotBlank(bulkleaveReqApproval.EMS_LM_2nd_Approver__c) ? LeaveRequestConstant.APPROVER_2_WAITING : LeaveRequestConstant.APPROVED;
+            	bulkleaveReqApproval.EMS_LM_Status__c = String.isNotBlank(bulkleaveReqApproval.EMS_LM_2nd_Approver__c) ? LeaveRequestConstant.APPROVER_3_WAITING : LeaveRequestConstant.APPROVED;
             	bulkleaveReqApproval.Approver_1_Approved_Comments__c = comments;
+                bulkleaveReqApproval.EMS_LM_Current_Approver__c = String.isNotBlank(bulkleaveReqApproval.EMS_LM_2nd_Approver__c) ? bulkleaveReqApproval.EMS_LM_2nd_Approver__r.LastName + ' ' +  bulkleaveReqApproval.EMS_LM_2nd_Approver__r.FirstName : bulkleaveReqApproval.EMS_LM_Approver__r.LastName + ' ' + bulkleaveReqApproval.EMS_LM_Approver__r.FirstName;
+                if(bulkleaveReqApproval.EMS_LM_Status__c == LeaveRequestConstant.APPROVED ) {
+                   bulkleaveReqApproval.EMS_LM_Approved_On__c	 = System.today();
+                }               
             	bulkupdatedLeaveReqList.add(bulkleaveReqApproval); 
             }
             //Approver 2
-            else if (LeaveRequestConstant.LOGGEDIN_USERID == bulkleaveReqApproval.EMS_LM_2nd_Approver__c ){
-                bulkleaveReqApproval.EMS_LM_Status__c = String.isNotBlank(bulkleaveReqApproval.Approver_3__c) ? LeaveRequestConstant.APPROVER_3_WAITING: LeaveRequestConstant.APPROVED;
+            else if (LeaveRequestConstant.LOGGEDIN_USERID == bulkleaveReqApproval.EMS_LM_2nd_Approver__c ) {
+                bulkleaveReqApproval.EMS_LM_Status__c = String.isNotBlank(bulkleaveReqApproval.Approver_3__c) ? LeaveRequestConstant.APPROVER_4_WAITING: LeaveRequestConstant.APPROVED;
                 bulkleaveReqApproval.Approver_2_Approved_Comments__c = comments;
+                bulkleaveReqApproval.EMS_LM_Current_Approver__c = String.isNotBlank(bulkleaveReqApproval.Approver_3__c) ? bulkleaveReqApproval.Approver_3__r.LastName + bulkleaveReqApproval.Approver_3__r.FirstName : bulkleaveReqApproval.EMS_LM_2nd_Approver__r.LastName + ' ' +  bulkleaveReqApproval.EMS_LM_2nd_Approver__r.FirstName ;
+                if(bulkleaveReqApproval.EMS_LM_Status__c == LeaveRequestConstant.APPROVED ) {
+                   bulkleaveReqApproval.EMS_LM_Approved_On__c	 = System.today();
+                }
                 bulkupdatedLeaveReqList.add(bulkleaveReqApproval); 
             }
             //Approver 3
             else if (LeaveRequestConstant.LOGGEDIN_USERID == bulkleaveReqApproval.Approver_3__c) {
-                bulkleaveReqApproval.EMS_LM_Status__c = 'Approved';
+                bulkleaveReqApproval.EMS_LM_Status__c = LeaveRequestConstant.APPROVED ;
                 bulkleaveReqApproval.Approver_3_Approved_Comments__c = comments;
+                bulkleaveReqApproval.EMS_LM_Current_Approver__c = String.isNotBlank(bulkleaveReqApproval.Approver_3__c) ? bulkleaveReqApproval.Approver_3__r.LastName + bulkleaveReqApproval.Approver_3__r.FirstName : Null;
                 bulkupdatedLeaveReqList.add(bulkleaveReqApproval); 
             }
         }
