--- a/force-app/main/default/classes/populateApproverDetails.cls
+++ b/force-app/main/default/classes/populateApproverDetails.cls
@@ -26,7 +26,7 @@ public without sharing class populateApproverDetails implements TriggerAction.Be
 **/
     public void beforeInsert(List<EMS_LM_Leave_History__c> newList) {      
         System.debug(LoggingLevel.DEBUG, 'populateApproverDetails.beforeInsert() : BEGIN');
-        restrictAssCreationForClosedProjects(newList);
+        populateApporverValuesOnLR(newList);
         System.debug(LoggingLevel.DEBUG, 'populateApproverDetails.beforeInsert() : END');       
     }
     
@@ -40,7 +40,7 @@ public without sharing class populateApproverDetails implements TriggerAction.Be
 *   N/A         N/A                     N/A
 *   ====================================================================================================
 **/
-    private void restrictAssCreationForClosedProjects(List<EMS_LM_Leave_History__c> newlist) {
+    private void populateApporverValuesOnLR(List<EMS_LM_Leave_History__c> newlist) {
         set<Id> contactIdSet = new set<Id>();
         Map<Id,Contact> resourceMap = new Map<Id,Contact>();
         for(EMS_LM_Leave_History__c newRec : newlist){
@@ -48,7 +48,7 @@ public without sharing class populateApproverDetails implements TriggerAction.Be
         }
         system.debug('====contactIdSet===='+contactIdSet);
         Map<Id,Id> resourceHiearchyMap = new Map<Id,Id>(); 
-        for(contact conRec : [SELECT Id,ReportsToId,ReportsTo.ReportsToId,ReportsTo.ReportsTo.ReportsToId FROM Contact WHERE Id IN:contactIdSet]){
+        for(contact conRec : [SELECT Id,ReportsToId,ReportsTo.ReportsToId,ReportsTo.ReportsTo.ReportsToId,Override_the_standard_level_of_approval__c,Level_of_Approval__c FROM Contact WHERE Id IN:contactIdSet]){
             System.debug('#### conRec '+ conRec);
             resourceHiearchyMap.put(conRec.Id,conRec.ReportsToId); // Level 1
             contactIdSet.add(conRec.ReportsToId);
@@ -64,20 +64,25 @@ public without sharing class populateApproverDetails implements TriggerAction.Be
         
         
         if(!contactIdSet.isEmpty()){
-            resourceMap = new Map<ID, Contact>([SELECT Id,Name,Resource_Role__c,Resource_Role__r.Name,Resource_Role__r.Level_of_Approval__c,EMS_TM_User__c,EMS_TM_User__r.FirstName, EMS_TM_User__r.LastName,
+            resourceMap = new Map<ID, Contact>([SELECT Id,Name,Override_the_standard_level_of_approval__c,Level_of_Approval__c,Resource_Role__c,Resource_Role__r.Name,Resource_Role__r.Level_of_Approval__c,Resource_Role__r.Auto_Approve__c,EMS_TM_User__c,EMS_TM_User__r.FirstName, EMS_TM_User__r.LastName,
                                                 (SELECT Id,Resource_Reports_To__c,Resource_Reports_To_User__c FROM Resource_Resource_Relationships__r WHERE Resource_Reports_To_User__c != null) 
                                                 FROM Contact Where Id IN:contactIdSet]); 
         }
         system.debug('====resourceMap===='+resourceMap);
         for(EMS_LM_Leave_History__c newRec : newlist){
             System.debug('### newRec 1' +newRec);
+            System.debug('### here 1');
             if(resourceMap.containsKey(newRec.EMS_LM_Contact__c) && newRec.EMS_LM_Leave_Type_Name__c != LeaveRequestConstant.WORK_FROM_HOME){
+                System.debug('### here 2');
                 contact conRes = resourceMap.get(newRec.EMS_LM_Contact__c);
-                newRec.Level_of_Approval__c = conRes.Resource_Role__r.Level_of_Approval__c; 
+                newRec.Level_of_Approval__c = conRes.Override_the_standard_level_of_approval__c ? conRes.Level_of_Approval__c : conRes.Resource_Role__r.Level_of_Approval__c;
+                newRec.EMS_LM_Auto_Approve__c = conRes.Resource_Role__r.Auto_Approve__c;
                 System.debug('### newRec.Level_of_Approval__c '+ newRec.Level_of_Approval__c);
                 system.debug('====conRes.Resource_Role__r.Level_of_Approval__c===='+conRes.Resource_Role__r.Level_of_Approval__c);
                 system.debug('====cnewRec.Level_of_Approval__c===='+newRec.Level_of_Approval__c);
-                if(newRec.Level_of_Approval__c > 0 && conRes.Resource_Resource_Relationships__r.size() > 0){
+                system.debug('### newRec.EMS_LM_Auto_Approve__c ' + newRec.EMS_LM_Auto_Approve__c);
+                if(newRec.Level_of_Approval__c > 0 && conRes.Resource_Resource_Relationships__r.size() > 0 && !newRec.EMS_LM_Auto_Approve__c){
+                    System.debug('### 1');
                     String appManager1 = resourceHiearchyMap.containsKey(conRes.Id)? resourceHiearchyMap.get(conRes.Id) : null;
                     String appManager2 = null;
                     String appManager3 = null;
@@ -95,12 +100,17 @@ public without sharing class populateApproverDetails implements TriggerAction.Be
                     }else if(newRec.Level_of_Approval__c == 3 && appManager2 != null){
                         appManager3 = resourceHiearchyMap.containsKey(appManager2)? resourceHiearchyMap.get(appManager2) : null; 
                         newRec.Approver_3__c = resourceMap.containsKey(appManager3) ? resourceMap.get(appManager3).EMS_TM_User__c : null;
-                    } 
-                    
-                }// Added by Pavan    
-            } else if (resourceMap.containsKey(newRec.EMS_LM_Contact__c) && newRec.EMS_LM_Leave_Type_Name__c == LeaveRequestConstant.WORK_FROM_HOME){
+                    }           
+                }// Added by Pavan Regarding Auto Approve
+                else {
+                    System.debug('### here 3');
+                    newRec.EMS_LM_Status__c = LeaveRequestConstant.AUTO_APPROVED;
+                    newRec.EMS_LM_Auto_Approve__c = true;
+                }
+                // Added by Pavan Regarding WFH
+            } else if (resourceMap.containsKey(newRec.EMS_LM_Contact__c) && newRec.EMS_LM_Leave_Type_Name__c == LeaveRequestConstant.WORK_FROM_HOME) {
                 contact conRes = resourceMap.get(newRec.EMS_LM_Contact__c);
-                newRec.Level_of_Approval__c = conRes.Resource_Role__r.Level_of_Approval__c;
+                newRec.Level_of_Approval__c = conRes.Override_the_standard_level_of_approval__c ? conRes.Level_of_Approval__c : conRes.Resource_Role__r.Level_of_Approval__c;
                 System.debug('### newRec.Level_of_Approval__c ' + newRec.Level_of_Approval__c);
                 String appManager1 = resourceHiearchyMap.containsKey(conRes.Id)? resourceHiearchyMap.get(conRes.Id) : null;
                 String appManager2 = null;
@@ -119,6 +129,9 @@ public without sharing class populateApproverDetails implements TriggerAction.Be
                     newRec.EMS_LM_Status__c = LeaveRequestConstant.PENDING;
                     newRec.EMS_LM_Approver__c = resourceMap.containsKey(appManager1) ? resourceMap.get(appManager1).EMS_TM_User__c : null; 
                     newRec.EMS_LM_Current_Approver__c = resourceMap.containsKey(appManager1) ? resourceMap.get(appManager1).EMS_TM_User__r.LastName : null;                  
+                } else if (newRec.EMS_LM_Leave_Type_Name__c == LeaveRequestConstant.WORK_FROM_HOME && newRec.Level_of_Approval__c == 0) {
+                    newRec.EMS_LM_Status__c = LeaveRequestConstant.AUTO_APPROVED;
+                    newRec.EMS_LM_Auto_Approve__c = true;
                 }
             }
         }
